// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chip renders input chip 1`] = `
<DocumentFragment>
  .c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-left: 8px;
  width: 16px;
}

.c2 {
  outline: none;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 12px;
  color: #007aff;
  border: 1px solid #c0cad5;
  background-color: #fff;
  border-radius: 2px;
  cursor: pointer;
  font-family: Montserrat;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  border: 1px solid #c0cad5;
  background-color: #f4f6f8;
  color: #4f6f8f;
}

.c1:hover {
  border: 1px solid #007aff;
  background-color: #f4f6f8;
}

.c1:disabled {
  border: 1px solid transparent;
  background-color: #f4f6f8;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c1 > svg {
  width: 20px;
  height: 20px;
}

.c1 > svg:last-child {
  width: 16px;
  height: 16px;
}

.c1:hover:not(:disabled) {
  border: 1px solid #364049;
  background-color: #edf0f3;
  color: #001833;
}

<div
    class="c0"
  >
    <button
      class="c1"
      color="primary"
    >
      Free Wifi
      <svg
        aria-hidden="true"
        class="c2 c3"
        fill="currentcolor"
        focusable="false"
        height="16"
        role="img"
        tabindex="-1"
        title="Close"
        viewBox="0 0 24 24"
        width="16"
      >
        <title>
          Close
        </title>
        <path
          d="M19 6.4L17.6 5 12 10.6 6.4 5 5 6.4l5.6 5.6L5 17.6 6.4 19l5.6-5.6 5.6 5.6 1.4-1.4-5.6-5.6L19 6.4z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;

exports[`Chip renders selected choice chip 1`] = `
<DocumentFragment>
  .c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 12px;
  color: #007aff;
  border: 1px solid #c0cad5;
  background-color: #fff;
  border-radius: 2px;
  cursor: pointer;
  font-family: Montserrat;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  border: 1px solid #007aff;
  background-color: #007aff;
  color: #fff;
}

.c1:hover {
  border: 1px solid #007aff;
  background-color: #f4f6f8;
}

.c1:disabled {
  border: 1px solid transparent;
  background-color: #f4f6f8;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c1 > svg {
  width: 20px;
  height: 20px;
}

.c1:hover {
  border: 1px solid #049;
  background-color: #049;
}

<div
    class="c0"
  >
    <button
      class="c1"
      color="primary"
    >
      Free Wifi
    </button>
  </div>
</DocumentFragment>
`;

exports[`Chip renders selected filter chip 1`] = `
<DocumentFragment>
  .c3 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  margin-left: 8px;
  width: 16px;
}

.c2 {
  outline: none;
}

.c0 {
  font-family: 'Montserrat','Helvetica Neue',Helvetica,Arial,sans-serif;
  line-height: 1.4;
  font-weight: 500;
}

.c0 * {
  box-sizing: border-box;
}

.c1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 12px;
  color: #007aff;
  border: 1px solid #c0cad5;
  background-color: #fff;
  border-radius: 2px;
  cursor: pointer;
  font-family: Montserrat;
  padding-top: 4px;
  padding-bottom: 4px;
  padding-left: 8px;
  padding-right: 8px;
  border: 1px solid #007aff;
  background-color: #e8f2ff;
}

.c1:hover {
  border: 1px solid #007aff;
  background-color: #f4f6f8;
}

.c1:disabled {
  border: 1px solid transparent;
  background-color: #f4f6f8;
  color: #4f6f8f;
  cursor: not-allowed;
}

.c1 > svg {
  width: 20px;
  height: 20px;
}

.c1 > svg:last-child {
  width: 16px;
  height: 16px;
}

<div
    class="c0"
  >
    <button
      class="c1"
      color="primary"
    >
      Free Wifi
      <svg
        aria-hidden="true"
        class="c2 c3"
        fill="currentcolor"
        focusable="false"
        height="16"
        role="img"
        tabindex="-1"
        title="Close"
        viewBox="0 0 24 24"
        width="16"
      >
        <title>
          Close
        </title>
        <path
          d="M19 6.4L17.6 5 12 10.6 6.4 5 5 6.4l5.6 5.6L5 17.6 6.4 19l5.6-5.6 5.6 5.6 1.4-1.4-5.6-5.6L19 6.4z"
        />
      </svg>
    </button>
  </div>
</DocumentFragment>
`;
